themes/main/src/sass/nacional.scss
@import '_includes/colors';
@import '_includes/query';
@import '_includes/mixins';

@mixin section-name(){
  display: block;
  color: $black-dark;
  text-transform: uppercase;
  border-bottom: 3px solid $red;
  margin-bottom: 10px;
}

@mixin picture-with-caption(){
  figure {
    margin: 0 auto;
    width: 90%;
    max-width: 460px;
    position: relative;

    @include media-query(MEDIUM) {
      width: 460px;
    }

    img {
      width: 100%;
    }
  }

  figcaption {
    position: absolute;
    bottom: 0px;
    color: white;
    width: 100%;
    padding-bottom: 20px;
    padding-top: 5px;


    .title, .credits {
      margin-left: 30px;
    }
  }
}

#home {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  margin-top: 70px;
  padding: 0 10px;
  padding-bottom: 20px;

  h1, h2 {
    margin-top: 0;
  }

  @include get-font(NACIONAL);

  @include media-query(MEDIUM) {
    margin: 220px auto 0 auto;
    width: 1060px;
    padding: 0 60px;
  }

  a {
    color: $link;

    &:hover {
      color: $link-hover;
    }

  }

}

#home figure {
  margin: 0;
}

#home .featured {
  width: 100%;
  display: inline-block;

  .section-name {
    @include section-name();

    @include media-query(MEDIUM) {
      display: none;
    }

  }

  article + article {
    border-top: 1px solid $gray-lighter;
    padding-top: 15px;
    @include media-query(MEDIUM) {
      border-top: 0;
      margin-top: 0;
      padding-top: 0;
    }
  }

  .description{
    color: $black-dark;
    margin-top: 5px;
  }

  @include media-query(MEDIUM) {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
  }

  article{
    margin-bottom: 15px;
    @include media-query(MEDIUM) {
      margin-bottom: 15px;
    }
  }
}

#home figcaption {
    position: absolute;
    color: white;
    background: rgba(19,19,19,0);
    background: -moz-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(19,19,19,0)), color-stop(85%, rgba(0,0,0,1)));
    background: -webkit-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: -o-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: -ms-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: linear-gradient(to bottom, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    text-shadow: 1px 1px 0px #000, 0 0 0 #fff, 1px 1px 0px #000;
    border-radius: 5px;
}

#home .featured .first {
  @include picture-with-caption();

  figure {
    width: 100%;
    margin: 0 auto;
  }

  img {
    border-radius: 5px 5px 5px 5px;
  }

  .title {
    color: white;
    width: 100%;
  }

  .description{
    display: none;
  }

}

#home .featured .second{
  figure {
    display: inline-block;
    @include media-query(MEDIUM) {
      display: block;
      width: 100%;
    }
  }

  img {
    max-width: 150px;
    width: 100%;
    border-radius: 5px;
    @include media-query(MEDIUM) {
      max-width: 100%;
    }
  }

  .title {
    display: inline-block;
    width: 50%;
    margin-left: 10px;
    position: absolute;
    @include media-query(MEDIUM) {
      position: relative;
      width: 100%;
      margin-left: 0;
    }
  }

  .description{
    @include media-query(MEDIUM) {
      display: none;
    }
  }
}

#home .featured .first, .third {
  @include media-query(MEDIUM) {
    width: 65%;
    margin-right: 20px;
  }
}

#home .featured .second, .forth {
  @include media-query(MEDIUM) {
    width: 30%;
  }
}

#home .featured .second, .third, .forth{
  .title {
    @include media-query(MEDIUM) {
      border-left: 3px solid $gray-lighter;
      padding-left: 10px;
      margin-top: 10px;
    }
  }
}

#home .featured .forth {
  .description{
    display: none;
  }
}

#home section + section {
  margin-top: 10px;
}

#home .main {
  align-self: flex-start;
  width: 700px;
  margin: 0;
  padding: 0;
}
#home .sidebar {
  align-self: flex-start;
  width: 100%;
  margin-left: 20px;
  margin-top: 0;
  @include media-query(MEDIUM) {
    width: 220px;
  }

  .advertisement {
    @include media-query(MEDIUM) {
      background-color: red;
      height: 220px;
      margin-bottom: 20px;
    }
  }
}

#home .secondary {
  background-color: $gray-medium;
  border-top: 1px solid $gray-light;
  border-bottom: 1px solid $gray-light;
  flex-flow: row wrap;
  display: flex;
  -webkit-justify-content:         space-around;
  justify-content:         space-around;
  padding-top: 20px;
  margin: 0 -10px;


  @include media-query(MEDIUM) {
    background-color: white;
    border: 0;
    padding-top: 0;
    justify-content: space-between;
    flex-wrap: nowrap;
  }

  article {
    width: 45%;
    max-width: 250px;
    margin: 0 10px 20px 10px;
    @include media-query(MEDIUM) {
      &:last-of-type {
        display: none;
      }
    }
  }

  article + article {
    @include media-query(MEDIUM) {
      margin-left: 10px;
    }
  }

  .hat{
    @include section-name();
    color: #6b6b6b;
  }

  img{
    border-radius: 5px;
    width: 100%;
  }

}

#home .container-tertiary {
  @include media-query(MEDIUM) {
    display: flex;
    width: 940px;
  }
}

#home .tertiary {
  display: none;
  @include media-query(MEDIUM) {
    display: inline-block;
    width: 460px;
    margin-right: 20px;
    article{
      margin-bottom: 30px;
    }
    .description{
      margin-top: 10px;
    }
  }
}

#home .picture img {
  @include media-query(MEDIUM) {
    border-radius: 5px;
  }
}

#home .opinions{
  width: 100%;
  display: inline-block;
  padding-bottom: 25px;

  .section-name {
    @include section-name();
  }

  img{
    border-radius: 50%;
    max-width: 100px;
    height: 100px;
    align-self: center;
  }

  .columnist + .columnist {
    margin-top: 20px;
  }

  .opinion {
    margin-left: 10px;
  }

  .title {
    color: $black-dark;;
    margin-top: 5px;
  }

  date::before {
    content: 'em ';
  }

  date {
    color: #545454;
    font-size: 0.8em;
    font-weight: 700;
  }

  @include media-query(MEDIUM) {
    width: 220px;
  }

}

#home .opinions .columnist {
    display: flex;
    margin-top: 20px;

    figure {
      flex: 0 0 60px;
      display: flex;
      flex-grow: 0;
      justify-content: center;
      padding-left: 10px;
    }

    img {
      max-width: 60px;
      max-height: 60px;
      align-self: flex-start;
    }

    &.first{
      flex-direction: column;

      figure {
        flex: 0 0 100px;
      }

      img {
        max-width: 100px;
        max-height: 100px;
      }

      .opinion {
        margin-top: 20px;
        text-align: center;
      }
    }

    .opinion {
      flex-grow: 1;
    }
}



#home .picture {
    background-color: $gray-medium;
    border-top: 1px solid $gray-light;
    border-bottom: 1px solid $gray-light;
    padding: 20px 0;
    margin: 0 -10px;
    @include picture-with-caption();
    @include media-query(MEDIUM) {
      background-color: white;
      border-top: 0;
      border-bottom: 0;

      display: inline-block;
      padding: 0;
      width: 460px;
      margin: 0;

    }
}

#home .gallery-images{
  max-width: 360px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  @include picture-with-caption();

  figure {
    max-height: 230px;
    overflow: hidden;
  }

  figure, .images {
    width: 95%;
    margin: 0 auto;
    background-color: rgba(50,50,50,1);
  }

  .section-name {
    @include section-name();
    margin-bottom: 15px;
  }
}

#home .gallery-images .images {
  display: flex;
}

#home .gallery-images .images .slider {
  padding: 0 15px;
  height: 100px;
  overflow-y: scroll;
  display: flex;

  img {
    max-height: 70px;
    align-self: center;
    border-radius: 5px;

    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition-duration: 0.1s;
    transition-duration: 0.1s;
    -webkit-transition-property: border;
    transition-property: border;
    -webkit-transition-timing-function: ease;
    transition-timing-function: ease;
    border: none;

    &:hover {
      cursor: pointer;
      border: 3px solid $gray-lighter;
    }
  }

  img + img {
    margin-left: 10px;
  }

  .active {
    border: 3px solid $gray-lighter;
  }
}

#home .gallery-images .images{

  &.disable-left::before {
    display: none;
  }

  &.disable-right::after {
    display: none;
  }

  &::after {
    content: ">";
    color: white;
    font-size: 1.2em;
    position: absolute;
    z-index: 10;
    font-weight: bold;
    font-family: 'Merriweather Sans', serif;
    padding-top: 25px;
    padding-right: 10px;
    padding-left: 5px;
    right: 18px;
    height: 75px;
    background: rgba(19,19,19,0);
    background: -moz-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(19,19,19,0)), color-stop(85%, rgba(0,0,0,1)));
    background: -webkit-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: -o-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: -ms-linear-gradient(top, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
    background: linear-gradient(to bottom, rgba(19,19,19,0) 0%, rgba(0,0,0,1) 85%);
  }

  &::before {
    content: "<";
    color: white;
    font-size: 1.2em;
    position: absolute;
    z-index: 10;
    font-weight: bold;
    font-family: 'Merriweather Sans', serif;
    padding-top: 25px;
    padding-left: 10px;
    padding-right: 5px;
    left: 19px;
    height: 75px;
    background: linear-gradient(
            to right,
            rgba(16, 16, 16, 1),
            rgba(16, 16, 16, 0.2) 55%,
            transparent
            );
  }
}

